--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ h1 {
 /* Work Section Styling */
 
 #work {
-
+  padding: 50px 0 50px 0;
 }
 
 #work h2 {
@@ -141,10 +141,83 @@ h1 {
 
 #about {
   padding: 30px;
+  padding-bottom: 0;
+  text-align: center;
 }
 
-#about h2 {
+.left-div {
+  display: inline-block;
+  width: 350px;
+  margin: 0;
+  vertical-align: top;
+  margin: 0 10px 0 10px;
+}
+
+.left-div h2 {
   font-weight: bold;
   font-style: italic;
-  font-size: 2.5em;
+  color: #2a64f8;
+  font-size: 2.9em;
+  margin-bottom: 40px;
+}
+
+.left-div img {
+  height: 250px;
+  width: 250px;
+  border-radius: 125px;
+  box-shadow: 25px 20px #2a64f8;
+  margin-bottom: 0;
+}
+
+.right-div {
+  display: inline-block;
+  width: 500px;
+  margin: 0;
+  vertical-align: top;
+  margin: 0 10px 0 10px;
+  margin-top: 140px;
+}
+
+.right-div p {
+  margin: 0;
+  color: white;
+  font-family: 'Inconsolata', monospace;
+  line-height: 180%;
+  padding: 20px;
+  background-color: #2a64f8;
+}
+
+.dash {
+  background-color: #2a64f8;
+  width: 5px;
+  height: 70px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Contact Section Styling */
+
+#contact {
+  padding: 12px;
+  padding-top: 0;
+}
+
+#contact .inner-div {
+  background-color: #2a64f8;
+  padding: 30px;
+}
+
+.inner-div h3 {
+  font-weight: bold;
+  font-style: italic;
+  color: white;
+  margin: 0;
+  font-size: 2.9em;
+}
+
+.inner-div p {
+  font-family: 'Inconsolata', monospace;
+  color: white;
+  max-width: 650px;
+  line-height: 180%;
 }
